--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-Django==1.8
-Markdown==2.4
+Django==1.9
+Markdown==2.6.6
 argparse==1.2.1
-distribute==0.6.24
-django-extensions==1.3.7
+distribute==0.7.3
+django-extensions==1.7.2
 django-social-auth==0.7.28
-httplib2==0.9
--e git+https://github.com/koniiiik/ksp_login.git@0e16707c48b79d78e16e43cc83e8fa8ccd6427f6#egg=ksp_login-dev
+httplib2==0.9.2
+ksp-login==0.4.2
 oauth2==1.5.211
-oauthlib==0.6.1
-psycopg2==2.5.3
+oauthlib==1.1.2
+psycopg2==2.6.2
 pygraphviz==1.2
 python-openid==2.2.5
-python-social-auth==0.2.0
-requests==2.3.0
-requests-oauthlib==0.4.0
-six==1.6.1
+python-social-auth==0.2.21
+requests==2.11.1
+requests-oauthlib==0.6.2
+six==1.10.0
 wsgiref==0.1.2
