--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-Django==1.9
-Markdown==2.6.6
-argparse==1.2.1
-distribute==0.7.3
-django-extensions==1.7.2
-django-social-auth==0.7.28
+Django==1.10.5
+django-extensions==1.7.5
 httplib2==0.9.2
 ksp-login==0.4.2
-oauth2==1.5.211
-oauthlib==1.1.2
+Markdown==2.6.7
+oauth2==1.9.0.post1
+oauthlib==2.0.1
+pkg-resources==0.0.0
 psycopg2==2.6.2
 pygraphviz==1.2
+PyJWT==1.4.2
 python-openid==2.2.5
-python-social-auth==0.2.21
-requests==2.11.1
-requests-oauthlib==0.6.2
+requests==2.12.5
+requests-oauthlib==0.7.0
 six==1.10.0
-wsgiref==0.1.2
+social-auth-app-django==0.1.0
+social-auth-core==0.2.1
